Fixed search field overlapping, added login/register btn with a route to it

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,9 +1,9 @@
 .sticky-nav {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+	position: sticky;
+	top: 0;
+	z-index: 10;
 }
 
 .custom-nav {
-  background: rgb(252, 220, 40);
+	background: rgb(252, 220, 40);
 }
